feat: cap nhat cau truc request response socket